--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
 }
 
 .page__body {
-  overflow-x: hidden;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
   background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed,
   url("../img/background.svg") center 0 / 1920px 938px no-repeat fixed;
   background-size: cover;
@@ -23,38 +23,43 @@
 }
 
 .header__title {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin: 0 auto;
   font-family: "Roboto", "Arial", sans-serif;
-  text-align: center;
   font-weight: 500;
   font-size: 36px;
   line-height: 55px;
-  margin: 0 auto;
+  text-align: center;
 }
 
 .main {
   margin: 28px 0 0 0;
-  padding: 0 0 239px 0;
+  padding: 0 0 25px 0;
 }
 
 .card-list {
-  padding: 0;
-  max-width: 1280px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, 372px);
+  display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   align-content: center;
   gap: 32px;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .card-list__item {
-  list-style-type: none;
   position: relative;
+  width: 372px;
   height: 372px;
   box-sizing: border-box;
+  color: #ffffff;
+  list-style-type: none;
   background: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
   border-radius: 10px;
-  color: #ffffff;
 }
 
 .card-list__item:hover{
@@ -62,25 +67,25 @@
 }
 
 .card {
+  display: flex;
   height: 100%;
   box-sizing: border-box;
-  display: flex;
   flex-flow: column nowrap;
-  padding: 24px 26px 24px 24px;
-  justify-content: end;
+  justify-content: flex-end;
   align-content: center;
+  padding: 24px 26px 24px 24px;
 }
 
 .card__title {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin: 0;
   font-family: "Roboto", "Arial", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
-  margin: 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .card-title__link {
@@ -93,22 +98,22 @@
 }
 
 .card__description {
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  margin: 9px 0 0 0;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  margin: 9px 0 0 0;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .card__line {
   margin: 21px 0 15px 0;
   height: 1px;
-  border: 0;
   background: rgba(255, 255, 255, 0.2);
+  border: 0;
 }
 
 .card__footer {
@@ -120,7 +125,10 @@
 }
 
 .area-price__head {
-  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 16px;
@@ -128,7 +136,10 @@
 }
 
 .area-price__text {
-  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   font-family: "Roboto", "Arial", sans-serif;
   font-weight: 700;
   font-size: 19px;
@@ -136,29 +147,27 @@
 }
 
 .area-price__cost {
-  color: #ff4b77;
+  padding: 0 2px 0 2px;
   font-size: 24px;
   line-height: 32px;
-  padding: 0 2px 0 2px;
+  color: #ff4b77;
 }
 
 .area-price__symbol {
-  color: #a8a8a8;
-  font-size: 23px;
   font-weight: 400;
+  font-size: 23px;
   line-height: 32px;
+  color: #a8a8a8;
 }
 
 .card__area-button {
-  align-self: end;
+  align-self: flex-end;
 }
 
 .card__button {
-  background: #f91155;
-  border-radius: 5px;
-  height: 48px;
-  width: 100%;
   display: flex;
+  width: 100%;
+  height: 48px;
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
@@ -167,6 +176,8 @@
   font-size: 16px;
   line-height: 24px;
   user-select: none;
+  background: #f91155;
+  border-radius: 5px;
 }
 
 .card__button:hover {
@@ -176,6 +187,13 @@
 
 .card__button:active {
   background: #f91155;
+}
+
+.card__button-inner{
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .card-box__image {
@@ -193,31 +211,6 @@
   color: #ffffff;
 }
 
-.card__reserved {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  display: none;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.4);
-}
-
-.footer__reserved {
-  position: absolute;
-  left: 0;
-  top: 73%;
-  bottom: 0;
-  z-index: 3;
-
-  display: none;
-  width: 100%;
-
-  background: #3c3e43;
-  border-radius: 0 0 10px 10px;
-}
-
 .text__link {
   color: #ff4b77;
   text-decoration: none;
@@ -227,9 +220,44 @@
   cursor: pointer;
 }
 
+.card__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 10px;
+}
+
+.card__reserved-wrapper{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 3;
+  display: none;
+  width: 100%;
+  height: 96px;
+  background: #3c3e43;
+  border-radius: 0 0 10px 10px;
+}
+
+.card__reserved {
+  display: flex;
+  height: 100%;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .reserved__text {
-  display: block;
-  margin: 30px auto;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -242,6 +270,7 @@
   position: absolute;
   top: 24px;
   left: 24px;
+  z-index: 10;
   height: 30px;
   padding: 4px 45px 5px 15px;
   box-sizing: border-box;
@@ -252,28 +281,32 @@
   background-image: url(../img/best_price.svg);
   background-repeat: no-repeat;
   background-size: 100%;
+  opacity: 0;
 }
 
-.best-price--active,
-.best-price--hidden {
-  display: none;
+.best-price--active {
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.card-list__item:hover:not(.card-list__item--active) > .best-price--active{
+  opacity: 1;
+  transition: 0.5s;
 }
 
 @media (min-width: 768px) and (max-width: 1279px) {
+
   .header {
     padding: 27px 0 0 0;
   }
 
   .main {
     margin: 26px 0 0 0;
-    padding: 0 0 39px 0;
   }
 
   .card-list {
     max-width: 800px;
     margin: 0 auto;
-    display: flex;
-    flex-flow: row wrap;
     gap: 37px 28px;
   }
 
@@ -297,6 +330,11 @@
   .card__area-button {
     align-self: stretch;
   }
+
+  .card__reserved-wrapper {
+    height: 160px;
+  }
+
 }
 
 @media (max-width: 767px) {
@@ -313,7 +351,6 @@
 
   .main {
     margin: 24px 0 0 0;
-    padding: 0 0 25px 0;
   }
 
   .card-list {
@@ -382,6 +419,16 @@
     border-radius: 3px;
     font-size: 14px;
   }
+
+  .card__overlay {
+    border-radius: 13px;
+  }
+
+  .card__reserved-wrapper {
+    height: 148px;
+    border-radius: 0 0 13px 13px;
+  }
+
 }
 
 
