--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 
-*{
+* {
   /*outline: 1px solid red;*/
 }
 
 .page {
-  width: 100%;
   height: 100%;
   box-sizing: border-box;
 }
@@ -56,13 +55,16 @@
   width: 372px;
   height: 372px;
   box-sizing: border-box;
+}
+
+.card-wrapper {
   color: #ffffff;
   list-style-type: none;
   background: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
   border-radius: 10px;
 }
 
-.card-list__item:hover{
+.card-wrapper:hover {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
 }
 
@@ -76,9 +78,13 @@
   padding: 24px 26px 24px 24px;
 }
 
+.card__title-link {
+  text-decoration: none;
+}
+
 .card__title {
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   margin: 0;
@@ -86,20 +92,16 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
-}
-
-.card-title__link {
-  text-decoration: none;
   color: #ffffff;
 }
 
-.card-title__link:hover{
+.card__title:hover {
   text-decoration: underline;
 }
 
 .card__description {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   margin: 9px 0 0 0;
@@ -125,6 +127,7 @@
 }
 
 .area-price__head {
+  margin: 0;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -136,6 +139,7 @@
 }
 
 .area-price__text {
+  margin: 0;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -153,7 +157,7 @@
   color: #ff4b77;
 }
 
-.area-price__symbol {
+.area-price__symbol-money {
   font-weight: 400;
   font-size: 23px;
   line-height: 32px;
@@ -164,39 +168,39 @@
   align-self: flex-end;
 }
 
-.card__button {
-  display: flex;
+.button {
+  padding: 12px 10px;
   width: 100%;
-  height: 48px;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
   user-select: none;
+  color: #ffffff;
+  outline: none;
+  border: 0;
   background: #f91155;
   border-radius: 5px;
 }
 
-.card__button:hover {
+.button:hover {
   cursor: pointer;
   background: #ff457d;
 }
 
-.card__button:active {
+.button:active {
+  color: #F9637C;
   background: #f91155;
 }
 
-.card__button-inner{
+.button__text{
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
-.card-box__image {
+.card-wrapper__image {
   position: absolute;
   top: 0;
   left: 0;
@@ -207,20 +211,7 @@
   border-radius: 10px;
 }
 
-.card__content {
-  color: #ffffff;
-}
-
-.text__link {
-  color: #ff4b77;
-  text-decoration: none;
-}
-
-.text__link:hover {
-  cursor: pointer;
-}
-
-.card__overlay {
+.card-wrapper__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -233,7 +224,7 @@
   border-radius: 10px;
 }
 
-.card__reserved-wrapper{
+.card-wrapper__reserved-wrapper {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -245,17 +236,18 @@
   border-radius: 0 0 10px 10px;
 }
 
-.card__reserved {
+.card-wrapper__reserved {
   display: flex;
   height: 100%;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
 }
 
 .reserved__text {
+  margin: 0;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
@@ -266,6 +258,15 @@
   line-height: 21px;
 }
 
+.reserved__text-link {
+  color: #ff4b77;
+  text-decoration: none;
+}
+
+.reserved__text-link:hover {
+  cursor: pointer;
+}
+
 .best-price {
   position: absolute;
   top: 24px;
@@ -274,14 +275,17 @@
   height: 30px;
   padding: 4px 45px 5px 15px;
   box-sizing: border-box;
-  font-family: SansSerif, sans-serif;
-  font-weight: 700;
-  font-size: 14px;
-  color: #ffffff;
   background-image: url(../img/best_price.svg);
   background-repeat: no-repeat;
   background-size: 100%;
   opacity: 0;
+}
+
+.best-price__text{
+  font-family: SansSerif, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #ffffff;
 }
 
 .best-price--active {
@@ -289,7 +293,7 @@
   transition: 0.5s;
 }
 
-.card-list__item:hover:not(.card-list__item--active) > .best-price--active{
+.card-wrapper:hover:not(.card-wrapper--active) > .best-price--active {
   opacity: 1;
   transition: 0.5s;
 }
@@ -331,7 +335,7 @@
     align-self: stretch;
   }
 
-  .card__reserved-wrapper {
+  .card-wrapper__reserved-wrapper {
     height: 160px;
   }
 
@@ -382,7 +386,7 @@
     line-height: 21px;
   }
 
-  .card-box__line {
+  .card__line {
     margin: 21px 0 18px 0;
   }
 
@@ -404,7 +408,7 @@
     line-height: 21px;
   }
 
-  .area-price__symbol,
+  .area-price__symbol-money,
   .area-price__cost {
     font-size: 20px;
   }
@@ -413,18 +417,18 @@
     align-self: stretch;
   }
 
-  .card__button {
-    height: 42px;
-    padding: 0 1px 0 1px;
+  .button {
+    /*height: 42px;*/
+    padding: 9px 10px;
     border-radius: 3px;
     font-size: 14px;
   }
 
-  .card__overlay {
+  .card-wrapper__overlay {
     border-radius: 13px;
   }
 
-  .card__reserved-wrapper {
+  .card-wrapper__reserved-wrapper {
     height: 148px;
     border-radius: 0 0 13px 13px;
   }
