--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-
-* {
-  /*outline: 1px solid red;*/
-}
-
 .page {
   height: 100%;
   box-sizing: border-box;
@@ -18,13 +13,10 @@
 }
 
 .header {
-  padding: 239px 0 0 0;
+  margin: 239px 0 0 0;
 }
 
 .header__title {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
   overflow: hidden;
   margin: 0 auto;
   font-family: "Roboto", "Arial", sans-serif;
@@ -32,10 +24,12 @@
   font-size: 36px;
   line-height: 55px;
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .main {
-  margin: 28px 0 0 0;
+  margin: 27px 0 0 0;
   padding: 0 0 25px 0;
 }
 
@@ -66,6 +60,10 @@
 
 .card-wrapper:hover {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
+}
+
+.card-wrapper--active:hover {
+  box-shadow: none;
 }
 
 .card {
@@ -99,6 +97,10 @@
   text-decoration: underline;
 }
 
+.card__title:active {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .card__description {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -127,22 +129,20 @@
 }
 
 .area-price__head {
-  margin: 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+  margin: 1px 0 0 0;
   overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .area-price__text {
-  margin: 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+  margin: 0 0 -1px 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
   font-family: "Roboto", "Arial", sans-serif;
   font-weight: 700;
@@ -189,11 +189,12 @@
 }
 
 .button:active {
-  color: #F9637C;
+  color: #f9637c;
   background: #f91155;
 }
 
-.button__text{
+.button__text {
+  margin: 0 0 0 2px;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -219,7 +220,6 @@
   display: none;
   width: 100%;
   height: 100%;
-
   background: rgba(255, 255, 255, 0.4);
   border-radius: 10px;
 }
@@ -246,9 +246,6 @@
 
 .reserved__text {
   margin: 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
   overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 400;
@@ -256,6 +253,8 @@
   color: #ffffff;
   text-align: center;
   line-height: 21px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .reserved__text-link {
@@ -265,31 +264,52 @@
 
 .reserved__text-link:hover {
   cursor: pointer;
+  text-decoration: underline;
+}
+
+.reserved__text-link:active {
+  color: #ff97b0;
 }
 
 .best-price {
   position: absolute;
-  top: 24px;
+  top: 25px;
   left: 24px;
   z-index: 10;
-  height: 30px;
-  padding: 4px 45px 5px 15px;
   box-sizing: border-box;
-  background-image: url(../img/best_price.svg);
-  background-repeat: no-repeat;
-  background-size: 100%;
+  padding: 6px 4px 3px 16px;
+  border-radius: 3px 0 0 3px;
+  background: #ff7647;
   opacity: 0;
+
 }
 
-.best-price__text{
-  font-family: SansSerif, sans-serif;
+.best-price::after {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  margin: 0 0 0 4px;
+  /*left: 0;*/
+  content: "";
+  width: 36px;
+  height: 30px;
+  background: url(../img/icon_discount.svg) no-repeat;
+}
+
+.best-price__text {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-family: "Roboto", "Arial", sans-serif;
   font-weight: 700;
   font-size: 14px;
   color: #ffffff;
+  max-width: 175px;
 }
 
 .best-price--active {
-  opacity: 0;
+  opacity: 1;
   transition: 0.5s;
 }
 
@@ -301,7 +321,7 @@
 @media (min-width: 768px) and (max-width: 1279px) {
 
   .header {
-    padding: 27px 0 0 0;
+    margin: 27px 0 0 0;
   }
 
   .main {
@@ -321,6 +341,10 @@
 
   .card {
     padding: 24px;
+  }
+
+  .card__title {
+    margin: 0 0 2px 0;
   }
 
   .card__footer {
@@ -344,7 +368,7 @@
 @media (max-width: 767px) {
 
   .header {
-    padding: 24px 0 0 0;
+    margin: 24px 0 0 0;
   }
 
   .header__title {
@@ -387,7 +411,7 @@
   }
 
   .card__line {
-    margin: 21px 0 18px 0;
+    margin: 20px 0 18px 0;
   }
 
   .card__footer {
@@ -399,6 +423,7 @@
   }
 
   .area-price__head {
+    margin: 0;
     font-size: 14px;
     line-height: 21px;
   }
@@ -411,6 +436,7 @@
   .area-price__symbol-money,
   .area-price__cost {
     font-size: 20px;
+    margin: 0 0 0 -1px;
   }
 
   .card__area-button {
@@ -418,10 +444,13 @@
   }
 
   .button {
-    /*height: 42px;*/
     padding: 9px 10px;
     border-radius: 3px;
     font-size: 14px;
+  }
+
+  .button__text {
+    margin: -1px 0 1px 2px;
   }
 
   .card-wrapper__overlay {
