--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 .page {
   height: 100%;
   box-sizing: border-box;
-}
-
-.page__body {
-  margin: 0;
-  height: 100%;
-  box-sizing: border-box;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+}
+
+.page__body {
+  margin: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
   background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed,
   url("../img/background.svg") center / 100% no-repeat fixed;
   background-size: cover;
@@ -281,6 +281,7 @@
   left: 24px;
   z-index: 10;
   box-sizing: border-box;
+  visibility: hidden;
   height: 30px;
   padding: 4px 5px 0 16px;
   border-radius: 3px 0 0 3px;
