--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
   overflow: hidden;
   margin: 0 auto;
   font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 500;
   font-size: 36px;
   line-height: 55px;
@@ -91,6 +92,7 @@
   overflow: hidden;
   margin: 0;
   font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
@@ -112,6 +114,7 @@
   overflow: hidden;
   margin: 9px 0 0 0;
   font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -136,6 +139,7 @@
   margin: 1px 0 0 0;
   overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
@@ -149,6 +153,7 @@
   white-space: nowrap;
   overflow: hidden;
   font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 19px;
   line-height: 24px;
@@ -162,10 +167,11 @@
 }
 
 .area-price__symbol-money {
+  font-style: normal;
   font-weight: 400;
   font-size: 23px;
   line-height: 32px;
-  color: #a8a8a8;
+  color: #999999;
 }
 
 .card__area-button {
@@ -176,6 +182,7 @@
   padding: 12px 10px;
   width: 100%;
   font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
@@ -189,12 +196,12 @@
 
 .button:hover {
   cursor: pointer;
-  background: #ff457d;
+  background: #d8003f;
 }
 
 .button:active {
   color: #f9637c;
-  background: #f91155;
+  background: #d8003f;
 }
 
 .button__text {
@@ -264,11 +271,12 @@
   margin: 0;
   overflow: hidden;
   font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 400;
   font-size: 14px;
+  line-height: 21px;
   color: #ffffff;
   text-align: center;
-  line-height: 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -320,8 +328,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   font-family: "Roboto", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 14px;
+  line-height: 21px;
   color: #ffffff;
   max-width: 175px;
 }
@@ -425,7 +435,6 @@
 
   .card__description {
     margin: 10px 0 0 0;
-    font-weight: 400;
     font-size: 14px;
     line-height: 21px;
   }
@@ -473,6 +482,7 @@
     margin: -1px 0 1px 2px;
   }
 
+  .card-wrapper__image,
   .card-wrapper__overlay {
     border-radius: 13px;
   }
