--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  margin: 9px 0 0 0;
+  margin: 10px 0 0 0;
   font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -378,6 +378,14 @@
     margin: 0 0 2px 0;
   }
 
+  .card__line {
+    margin: 21px 0 16px 0;
+  }
+
+  .card__description {
+    margin: 8px 0 0 0;
+  }
+
   .card__footer {
     display: flex;
     flex-flow: column nowrap;
@@ -435,7 +443,7 @@
   }
 
   .card__description {
-    margin: 10px 0 0 0;
+    margin: 11px 0 0 0;
     font-size: 14px;
     line-height: 21px;
   }
