--- a/css/style.sass
+++ b/css/style.sass
@@ -15,6 +15,19 @@
   url('../img/background.svg') center / 100% no-repeat fixed
   background-size: cover
 
-
 .header
   margin: 24px 0 0 0
+
+.header__title
+  overflow: hidden
+  margin: 0 auto
+  font-family: 'Roboto', 'Arial', sans-serif
+  font-style: normal
+  font-weight: 500
+  font-size: 36px
+  line-height: 55px
+  text-align: center
+  text-overflow: ellipsis
+  white-space: nowrap
+
+
