--- a/css/style_old.css
+++ b/css/style_old.css
@@ -88,7 +88,6 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  /*align-items: center;*/
   gap: 32px;
   max-width: 1280px;
   margin: 0 auto;
@@ -208,7 +207,6 @@
 }
 
 .card__area-button {
-  /*align-self: flex-end;*/
   margin: 8px 0 0 0;
 }
 
@@ -240,6 +238,7 @@
 
 .button__text {
   margin: 0 0 0 2px;
+  pointer-events: none;
 }
 
 .card-wrapper__image {
