--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,38 @@
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-v30-cyrillic_latin-regular.woff2') format('woff2'),
-  url('../fonts/roboto-v30-cyrillic_latin-regular.woff') format('woff');
+  src: url("../fonts/roboto-v30-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-regular.woff") format("woff");
 }
-
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/roboto-v30-cyrillic_latin-500.woff2') format('woff2'),
-  url('../fonts/roboto-v30-cyrillic_latin-500.woff') format('woff');
+  src: url("../fonts/roboto-v30-cyrillic_latin-500.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-500.woff") format("woff");
 }
-
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/roboto-v30-cyrillic_latin-700.woff2') format('woff2'),
-  url('../fonts/roboto-v30-cyrillic_latin-700.woff') format('woff');
+  src: url("../fonts/roboto-v30-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-700.woff") format("woff");
 }
-
 @font-face {
   font-display: swap;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/open-sans-v35-cyrillic_latin-regular.woff2') format('woff2'),
-  url('../fonts/open-sans-v35-cyrillic_latin-regular.woff') format('woff');
+  src: url("../fonts/open-sans-v35-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-regular.woff") format("woff");
 }
-
 @font-face {
   font-display: swap;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/open-sans-v35-cyrillic_latin-700.woff2') format('woff2'),
-  url('../fonts/open-sans-v35-cyrillic_latin-700.woff') format('woff');
+  src: url("../fonts/open-sans-v35-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/open-sans-v35-cyrillic_latin-700.woff") format("woff");
 }
-
 .page {
   height: 100%;
   box-sizing: border-box;
@@ -51,25 +41,22 @@
   justify-content: center;
   align-items: center;
 }
-
 .page__body {
   margin: 0;
   width: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
-  background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed,
-  url('../img/background.svg') center / 100% no-repeat fixed;
+  background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%) fixed, url("../img/background.svg") center/100% no-repeat fixed;
   background-size: cover;
 }
 
 .header {
   margin: 24px 0 0 0;
 }
-
 .header__title {
   overflow: hidden;
   margin: 0 auto;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 36px;
@@ -93,7 +80,6 @@
   margin: 0 auto;
   padding: 0;
 }
-
 .card-list__item {
   position: relative;
   width: 372px;
@@ -107,12 +93,10 @@
   background: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
   border-radius: 10px;
 }
-
 .card-wrapper:hover {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
 }
-
-.card-wrapper--selected:hover {
+.card-wrapper--card-wrapper:hover {
   box-shadow: none;
   cursor: pointer;
 }
@@ -126,45 +110,38 @@
   align-items: stretch;
   padding: 24px 26px 24px 24px;
 }
-
 .card__title-link {
   text-decoration: none;
 }
-
 .card__title {
   margin: 0;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
   color: #ffffff;
 }
-
 .card__title:hover {
   text-decoration: underline;
 }
-
 .card__title:active {
   color: rgba(255, 255, 255, 0.5);
 }
-
 .card__description {
   margin: 10px 0 0 0;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
 }
-
 .card__line {
   margin: 21px 0 15px 0;
   height: 1px;
   background: rgba(255, 255, 255, 0.2);
   border: 0;
 }
-
 .card__footer {
   display: grid;
   grid-template-columns: 117px 180px;
@@ -172,32 +149,32 @@
   align-items: stretch;
   column-gap: 27px;
 }
+.card__area-button {
+  margin: 8px 0 0 0;
+}
 
 .area-price__head {
   margin: 1px 0 0 0;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
 }
-
 .area-price__text {
   margin: 0 0 -1px 0;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 19px;
   line-height: 24px;
 }
-
 .area-price__cost {
   padding: 0 2px 0 2px;
   font-size: 24px;
   line-height: 32px;
   color: #ff4b77;
 }
-
 .area-price__symbol-money {
   font-style: normal;
   font-weight: 400;
@@ -206,14 +183,10 @@
   color: #999999;
 }
 
-.card__area-button {
-  margin: 8px 0 0 0;
-}
-
 .button {
   padding: 12px 10px;
   width: 100%;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -225,17 +198,14 @@
   background: #f91155;
   border-radius: 5px;
 }
-
 .button:hover {
   cursor: pointer;
   background: #d8003f;
 }
-
 .button:active {
   color: #f9637c;
   background: #d8003f;
 }
-
 .button__text {
   margin: 0 0 0 2px;
   pointer-events: none;
@@ -251,7 +221,6 @@
   object-fit: cover;
   border-radius: 10px;
 }
-
 .card-wrapper__overlay {
   position: absolute;
   top: 0;
@@ -262,7 +231,6 @@
   background: rgba(255, 255, 255, 0.4);
   border-radius: 10px;
 }
-
 .card-wrapper__reserved-wrapper {
   position: absolute;
   left: 0;
@@ -299,7 +267,7 @@
 .reserved__text {
   margin: 0;
   overflow: hidden;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -309,17 +277,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .reserved__text-link {
   color: #ff4b77;
   text-decoration: none;
 }
-
 .reserved__text-link:hover {
   cursor: pointer;
   text-decoration: underline;
 }
-
 .reserved__text-link:active {
   color: #ff97b0;
 }
@@ -337,38 +302,35 @@
   background: #ff7647;
   opacity: 0;
 }
-
 .best-price::after {
   display: inline-block;
   vertical-align: middle;
   position: absolute;
   top: 0;
   margin: 0 0 0 4px;
-  content: '';
+  content: "";
   width: 36px;
   height: 30px;
   background: url(../img/icon_discount.svg) no-repeat;
 }
-
+.best-price--active {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s, visibility 0s 1s;
+}
 .best-price__text {
   display: inline-block;
   vertical-align: middle;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
   color: #ffffff;
   max-width: 175px;
-}
-
-.best-price--active {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 1s, visibility 0s 1s;
 }
 
 .card-wrapper--active:hover > .best-price--active {
@@ -378,42 +340,33 @@
 }
 
 @media (min-width: 768px) and (max-width: 1279px) {
-
   .header {
     margin-top: 27px;
   }
-
   .main {
     margin-top: 26px;
   }
-
   .card-list {
     max-width: 800px;
     margin: 0 auto;
     gap: 37px 28px;
   }
-
   .card-list__item {
     width: 336px;
     min-height: 420px;
   }
-
   .card {
     padding: 24px;
   }
-
   .card__title {
     margin: 0 0 2px 0;
   }
-
   .card__line {
     margin: 21px 0 16px 0;
   }
-
   .card__description {
     margin-top: 8px;
   }
-
   .card__footer {
     display: flex;
     flex-flow: column nowrap;
@@ -421,41 +374,32 @@
     align-items: stretch;
     row-gap: 16px;
   }
-
   .card__area-button {
     align-self: stretch;
     margin-top: 0;
   }
-
   .card-wrapper__reserved-wrapper {
     height: 161px;
   }
-
 }
-
 @media (max-width: 767px) {
-
   .header {
     margin-top: 24px;
   }
-
   .header__title {
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
   }
-
   .main {
     margin-top: 24px;
   }
-
   .card-list {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     row-gap: 32px;
   }
-
   .card-list__item {
     display: flex;
     justify-content: stretch;
@@ -464,26 +408,21 @@
     min-height: 347px;
     border-radius: 13px;
   }
-
   .card {
     padding: 21px;
   }
-
   .card__title {
     font-size: 20px;
     line-height: 26px;
   }
-
   .card__description {
     margin: 11px 0 0 0;
     font-size: 14px;
     line-height: 21px;
   }
-
   .card__line {
     margin: 20px 0 18px 0;
   }
-
   .card__footer {
     display: flex;
     flex-flow: column nowrap;
@@ -491,49 +430,36 @@
     align-items: stretch;
     row-gap: 16px;
   }
-
+  .card__area-button {
+    align-self: stretch;
+    margin-top: 0;
+  }
   .area-price__head {
     margin: 0;
     font-size: 14px;
     line-height: 21px;
   }
-
   .area-price__text {
     font-size: 17px;
     line-height: 21px;
   }
-
-  .area-price__symbol-money,
-  .area-price__cost {
+  .area-price__symbol-money, .area-price__cost {
     font-size: 20px;
     margin: 0 0 0 -1px;
   }
-
-  .card__area-button {
-    align-self: stretch;
-    margin-top: 0;
-  }
-
   .button {
     padding: 9px 10px;
     border-radius: 3px;
     font-size: 14px;
   }
-
   .button__text {
     margin: -1px 0 1px 2px;
   }
-
-  .card-wrapper__image,
-  .card-wrapper__overlay {
+  .card-wrapper__image, .card-wrapper__overlay {
     border-radius: 13px;
   }
-
   .card-wrapper__reserved-wrapper {
     height: 149px;
     border-radius: 0 0 13px 13px;
   }
-
 }
-
-
