--- a/css/style.sass
+++ b/css/style.sass
@@ -195,6 +195,7 @@ $second-family-text: "Open Sans", "Arial", sans-serif
     color: #999999
 
 .button
+  margin: 0
   padding: 12px 10px
   width: 100%
   font-family: $second-family-text
