--- a/css/style.sass
+++ b/css/style.sass
@@ -273,8 +273,6 @@ $second-family-text: "Open Sans", "Arial", sans-serif
   visibility: visible
   transition: opacity 1s, visibility 0s
 
-
-
 .reserved
   &__text
     margin: 0
@@ -452,7 +450,7 @@ $second-family-text: "Open Sans", "Arial", sans-serif
       margin: 0 0 0 -1px
 
     &__symbol-money
-      font-family: $second-family-text
+      font-family: -apple-system, "Open Sans", "Arial", sans-serif
       font-size: 20px
 
   .button
