--- a/css/style.sass
+++ b/css/style.sass
@@ -187,6 +187,7 @@ $second-family-text: "Open Sans", "Arial", sans-serif
     color: #ff4b77
 
   &__symbol-money
+    font-family: -apple-system, "Open Sans", "Arial", sans-serif
     margin: 0 0 0 1px
     font-style: normal
     font-weight: 400
@@ -450,7 +451,7 @@ $second-family-text: "Open Sans", "Arial", sans-serif
       margin: 0 0 0 -1px
 
     &__symbol-money
-      font-family: -apple-system, "Open Sans", "Arial", sans-serif
+      font-family: -apple-system, "Roboto", "Arial", sans-serif
       font-size: 20px
 
   .button
